npm audit updates

--- a/package.json
+++ b/package.json
@@ -29,17 +29,18 @@
   "dependencies": {
     "assert": "^1.4.1",
     "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
     "dateformat": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoclient": "^1.0.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "aws-sdk": "^2.362.0",
     "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -50,7 +51,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.26.2",
     "eslint-plugin-wyze": "^3.4.0",
-    "jest": "^23.6.0",
+    "jest": "^24.7.1",
     "serverless": "^1.40.0",
     "serverless-plugin-include-dependencies": "^3.1.1",
     "serverless-pseudo-parameters": "^2.2.0",
