--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dateformat": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoclient": "^1.0.3",
+    "mongodb": "^3.2.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
