--- a/serverless.yml
+++ b/serverless.yml
@@ -42,13 +42,18 @@ functions:
       include:
         - snapshotReport.js
   ingestEstablishments:
-    handler: ingestEstablishment.handler
+    handler: ingestEstablishments.handler
     environment:
       STREAM: 'establishments.dev'
       LOG_LEVEL: 3      # 0-disabled; 1-errors, 2-warnings, 3-info, 4-debug, 5-trace
       SLACK_WEBHOOK: 'SLACK_URL'
       SLACK_LEVEL: 0          # 0-disabled; 1-errors, 2-warnings, 3-info, 4-debug, 5-trace
+      MONGO_DB_URI: ${env:MONGO_DB_URI}
     role: arn:aws:iam::#{AWS::AccountId}:role/sfc-dev-lambda     # note, the name of the role includes the region, but with underscores
+    events:
+      - stream:
+          type: kinesis
+          arn:  arn:aws:kinesis:#{AWS::Region}:#{AWS::AccountId}:stream/establishments.dev
     tags:
       application: "Pump"
       company: "SfC"
