--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,8 @@ provider:
   environment:
     LOG_LEVEL: 1      # 0-disabled; 1-errors, 2-warnings, 3-info, 4-debug, 5-trace
     SLACK_LEVEL: 1          # 0-disabled; 1-errors, 2-warnings, 3-info, 4-debug, 5-trace
-  role: arn:aws:iam::#{AWS::AccountId}:role/Ssfc-dev-lambda 
+    STORE: "${self:provider.stage}/ondemand/reporting"
+  role: arn:aws:iam::#{AWS::AccountId}:role/sfc-dev-lambda 
 
 package:
   individually: true
@@ -30,13 +31,12 @@ functions:
   snapshotReport:
     handler: snapshotReport.handler
     environment:
-      SFC_API_ENDPOINT: 'https://sfcdev.cloudapps.digital/api'
+      SFC_HOST: 'sfcdev.cloudapps.digital'
       LOG_LEVEL: 3      # 0-disabled; 1-errors, 2-warnings, 3-info, 4-debug, 5-trace
-      SLACK_WEBHOOK: 'SLACK_URL'
-      SLACK_LEVEL: 0          # 0-disabled; 1-errors, 2-warnings, 3-info, 4-debug, 5-trace
     role: arn:aws:iam::#{AWS::AccountId}:role/sfc-dev-lambda     # note, the name of the role includes the region, but with underscores
     tags:
-      application: "On-Demand Reporting"
+      application: "Pump"
+      function: "On Demand Reporting"
       company: "SfC"
     package:
       include:
@@ -46,8 +46,6 @@ functions:
     environment:
       STREAM: 'establishments.dev'
       LOG_LEVEL: 3      # 0-disabled; 1-errors, 2-warnings, 3-info, 4-debug, 5-trace
-      SLACK_WEBHOOK: 'SLACK_URL'
-      SLACK_LEVEL: 0          # 0-disabled; 1-errors, 2-warnings, 3-info, 4-debug, 5-trace
       MONGO_DB_URI: ${env:MONGO_DB_URI}
     role: arn:aws:iam::#{AWS::AccountId}:role/sfc-dev-lambda     # note, the name of the role includes the region, but with underscores
     events:
@@ -58,6 +56,7 @@ functions:
           startingPosition: LATEST
     tags:
       application: "Pump"
+      function: "On Demand Reporting"
       company: "SfC"
     package:
       include:
