Have demonstrated successful local and stage=dev deployment against sfcdev.cloudapps.digital.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "assert": "^1.4.1",
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
+    "csv-writer": "^1.2.0",
     "dateformat": "^3.0.3",
+    "form-data": "^2.3.3",
     "jsonwebtoken": "^8.5.1",
     "mongoclient": "^1.0.3",
     "mongodb": "^3.2.3",
