Preparation for deployment to UAT/live - with the introduction of sender/recipient email addresses and API versioning env properties, and updating dailySnapshotReportV1 against the new target UAT view DDL.

--- a/serverless.yml
+++ b/serverless.yml
@@ -8,12 +8,12 @@ custom:
     dev: warren.ayling@wozitech-ltd.co.uk
     staging: warren.ayling@wozitech-ltd.co.uk
     preprod: warren.ayling@wozitech-ltd.co.uk
-    prod: warren.ayling@wozitech-ltd.co.uk
+    prod: NMDSdevopsServiceAdm@hotmail.com
   EMAIL_RECIPIENT:
     dev: warren.ayling@wozitech-ltd.co.uk
     staging: warren.ayling@wozitech-ltd.co.uk
     preprod: warren.ayling@wozitech-ltd.co.uk
-    prod: warren.ayling@wozitech-ltd.co.uk
+    prod: david.griffiths@skillsforcare.org.uk
   STORE:
     dev: "dev/ondemand/reporting"
     staging: "staging/ondemand/reporting"
