--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dateformat": "^3.0.3",
     "form-data": "^2.3.3",
     "jsonwebtoken": "^8.5.1",
+    "mailcomposer": "^4.0.2",
     "mongoclient": "^1.0.3",
     "mongodb": "^3.2.3",
     "uuid": "^3.3.2"
