--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "package:dev": "npm run-script build && cd lib && sls package -v --stage dev",
-    "package:test": "npm run-script build && cd lib && sls package -v --stage test",
+    "package:staging": "npm run-script build && cd lib && sls package -v --stage staging",
     "package:prod": "npm run-script build && cd lib && sls package -v --stage prod",
     "deploy:dev": "npm run-script build && cd lib && sls deploy -v --stage dev",
-    "deploy:test": "npm run-script build && cd lib && sls deploy -v --stage test",
+    "deploy:staging": "npm run-script build && cd lib && sls deploy -v --stage staging",
     "deploy:prod": "npm run-script build && cd lib && sls deploy -v --stage prod",
     "remove:dev": "cd lib && sls remove -v --stage dev",
     "remove:test": "cd lib && sls remove -v --stage test",
