Adding Roy to daily snapshot email distribution list for preprod

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ custom:
   EMAIL_RECIPIENT:
     dev: warren.ayling@wozitech-ltd.co.uk
     staging: ann.shepherd1@soprasteria.com
-    preprod: warren.ayling@wozitech-ltd.co.uk;sarah.davison@skillsforcare.org.uk
+    preprod: warren.ayling@wozitech-ltd.co.uk;sarah.davison@skillsforcare.org.uk;roy.price@skillsforcare.org.uk
     prod: david.griffiths@skillsforcare.org.uk;roy.price@skillsforcare.org.uk
   STORE:
     dev: "dev/ondemand/reporting"
@@ -71,7 +71,7 @@ functions:
   snapshotReport:
     handler: snapshotReport.handler
     memorySize: 512
-    timeout: 120      # preprod and production runs will take longer to download from source, and then parse, format and upload to S3
+    timeout: 240      # preprod and production runs will take longer to download from source, and then parse, format and upload to S3
     environment:
       SFC_HOST: "${self:custom.SFC_HOST.${self:provider.stage}}"
       ISS: "${self:custom.ISS.${self:provider.stage}}"
